clusters/talos-cluster/ada/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ada-grpc
  namespace: ada
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ada
  ports:
    - name: grpc
      port: 50051
      targetPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: ada-http
  namespace: ada
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ada
  ports:
    - name: http
      port: 4000
      targetPort: 4000
