clusters/talos-cluster/ada/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ada-route
  namespace: ada
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "ada.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 0s
        backendRequest: 0s
      backendRefs:
        - name: ada-http
          port: 4000
